--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -3,6 +3,11 @@
    workflow_dispatch:
    pull_request:
        types: [opened, edited, reopened]
+   push:
+     - main
+     - development
+   paths-ignore:
+     - '.github/workflows/*'
 
  jobs:
    print:
