--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -1,11 +1,14 @@
  name: Print Pull Request Context
  on:
+   workflow_dispatch:
+   pull_request:
+       types: [opened, edited, reopened]
    push:
      branches:
       - main
       - development
-   paths-ignore:
-     - '.github/workflows/*'
+     paths-ignore:
+      - '.github/workflows/*'
 
  jobs:
    print:
