--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -7,8 +7,8 @@
      branches:
       - main
       - development
-     paths-ignore:
-      - '.github/workflows/*'
+#     paths-ignore:
+#      - '.github/workflows/*'
 
  jobs:
    print:
