--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -15,4 +15,4 @@
      runs-on: ubuntu-latest
      steps:
        - name: Print context
-         run: echo '${{ toJSON(github.event) }}'
+         run: echo "${{ toJSON(github) }}"
