--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -31,9 +31,10 @@ jobs:
         run: npm run lint
   build:
     needs: [lint, test]
+    continue-on-error: true
     strategy:
       matrix:
-        node-version: [14, 16]
+        node-version: [0, 16]
         os: [ubuntu-latest, windows-latest]
     runs-on: ${{ matrix.os }}
     steps:
