--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -1,56 +1,16 @@
-name: Deploy React App
-on: push
+name: Build
+on: [push, workflow_dispatch]
 jobs:
-  test:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Get repository code
-        uses: actions/checkout@v3
-      - name: Cache dependencies
-        uses: actions/cache@v3
-        with:
-          path: ~/.npm
-          key: node-modules-deps-${{ hashFiles('**/package-lock.json') }}
-      - name: Install dependencies
-        run: npm ci
-      - name: Test application
-        run: npm run test
-  lint:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Get repository code
-        uses: actions/checkout@v3
-      - name: Cache dependencies
-        uses: actions/cache@v3
-        with:
-          path: ~/.npm
-          key: node-modules-deps-${{ hashFiles('**/package-lock.json') }}
-      - name: Install dependencies
-        run: npm ci
-      - name: Lint application
-        run: npm run lint
   build:
-    needs: [lint, test]
-    strategy:
-      matrix:
-        node-version: [0, 16]
-        os: [ubuntu-latest, windows-latest]
-    runs-on: ${{ matrix.os }}
-    steps:
-      - name: Get repository code
-        uses: actions/checkout@v3
-      - name: Install Node JS
-        uses: actions/setup-node@v3
-        with:
-          node-version: ${{ matrix.node-version }}
-      - name: Cache dependencies
-        uses: actions/cache@v3
-        with:
-          path: ~/.npm
-          key: node-modules-deps-${{ hashFiles('**/package-lock.json') }}
-      - name: Install dependencies
-        run: npm ci
-      - name: Build application
-        run: npm run build
-      - name: Deploy
-        run: echo Deploying...
+    runs-on:
+    - name: Get code
+      uses: actions/checkout@v3
+    - name: Install deps
+      run: npm ci
+    - name: Build project
+      run: npm run build
+    - name: Upload Artifact
+      uses: actions/upload-artifact@v3
+      with:
+        path: build
+        name: build-files
